Update MRU implementation

--- a/src/VideoApp/ControlStyles.xaml
+++ b/src/VideoApp/ControlStyles.xaml
@@ -400,6 +400,7 @@
                         <StackPanel>
                             <Border 
                                 x:Name="PART_BORDER"
+                                Padding="{TemplateBinding Padding}"
                                 BorderThickness="1"
                                 Background="{TemplateBinding Background}"
                                 CornerRadius="{TemplateBinding CornerRadius}">
