--- a/src/VideoApp/ControlStyles.xaml
+++ b/src/VideoApp/ControlStyles.xaml
@@ -2,7 +2,10 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"  
+    xmlns:converters="using:VideoApp.Converters"
     xmlns:controls="using:VideoApp.Controls">
+
+    <converters:VisibilityConverter x:Key="VisibilityConverter"/>
 
     <Style TargetType="Thumb" x:Key="AppSliderThumbStyle">
         <Setter Property="BorderThickness" Value="1" />
@@ -360,6 +363,13 @@
                                 <VisualState x:Name="Normal" />
                                 <VisualState x:Name="PointerOver">
                                     <Storyboard>
+                                        <ObjectAnimationUsingKeyFrames 
+                                            Storyboard.TargetName="PART_SELECTED" 
+                                            Storyboard.TargetProperty="Fill">
+                                            <DiscreteObjectKeyFrame
+                                                KeyTime="0" 
+                                                Value="{ThemeResource AccentFillColorSecondaryBrush}" />
+                                        </ObjectAnimationUsingKeyFrames>
                                         <ObjectAnimationUsingKeyFrames
                                             Storyboard.TargetName="PART_BORDER" 
                                             Storyboard.TargetProperty="Background">
@@ -378,6 +388,13 @@
                                 </VisualState>
                                 <VisualState x:Name="Pressed">
                                     <Storyboard>
+                                        <ObjectAnimationUsingKeyFrames 
+                                            Storyboard.TargetName="PART_SELECTED" 
+                                            Storyboard.TargetProperty="Fill">
+                                            <DiscreteObjectKeyFrame
+                                                KeyTime="0" 
+                                                Value="{ThemeResource AccentFillColorTertiaryBrush}" />
+                                        </ObjectAnimationUsingKeyFrames>
                                         <ObjectAnimationUsingKeyFrames 
                                             Storyboard.TargetName="PART_BORDER" 
                                             Storyboard.TargetProperty="Background">
@@ -404,7 +421,20 @@
                                 BorderThickness="1"
                                 Background="{TemplateBinding Background}"
                                 CornerRadius="{TemplateBinding CornerRadius}">
-                                <ContentPresenter/>
+                                <Grid>
+                                    <Rectangle
+                                        x:Name="PART_SELECTED"
+                                        Visibility="{Binding IsSelected, RelativeSource={RelativeSource Mode=TemplatedParent}, Converter={StaticResource VisibilityConverter}}"
+                                        Fill="{ThemeResource AccentFillColorDefaultBrush}"
+                                        Width="4"
+                                        Margin="0,4"
+                                        HorizontalAlignment="Left"
+                                        VerticalAlignment="Stretch"
+                                        RadiusX="2"
+                                        RadiusY="2"/>
+                                    
+                                    <ContentPresenter VerticalAlignment="Center" Margin="8,0,0,0"/>
+                                </Grid>
                             </Border>
                         </StackPanel>
                     </Grid>
