Refactor player toolbar control

--- a/src/VideoApp/ControlStyles.xaml
+++ b/src/VideoApp/ControlStyles.xaml
@@ -5,6 +5,7 @@
     xmlns:converters="using:VideoApp.Converters"
     xmlns:controls="using:VideoApp.Controls">
 
+    <converters:TimeValueConverter x:Key="TimeValueConverter"/>
     <converters:VisibilityConverter x:Key="VisibilityConverter"/>
 
     <Style TargetType="Thumb" x:Key="AppSliderThumbStyle">
