--- a/src/VideoApp/Views/ControlView.xaml
+++ b/src/VideoApp/Views/ControlView.xaml
@@ -1,57 +1,88 @@
-<UserControl 
-    x:Class="VideoApp.Controls.PlayerToolbarControl"
+<UserControl
+    x:Class="VideoApp.Views.ControlView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:VideoApp.Controls"
+    xmlns:local="using:VideoApp.Views"
+    xmlns:media="using:Microsoft.UI.Xaml.Media"
     xmlns:models="using:VideoApp.Core.Models"
+    xmlns:controls="using:VideoApp.Controls"
     xmlns:converters="using:VideoApp.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Border 
-        MaxWidth="800"
-        Margin="8"
-        VerticalAlignment="Bottom"
-        Background="{ThemeResource LayerOnMicaBaseAltFillColorDefaultBrush}"
-        BorderBrush="{ThemeResource ControlElevationBorderBrush}"
-        BorderThickness="1"
-        CornerRadius="8"
-        Padding="4,8,4,8">
-        <Grid>
+    <Grid 
+        VerticalAlignment="Stretch"
+        HorizontalAlignment="Stretch">
+
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="Visibility">
+                <VisualState x:Name="Visible">
+                    <Storyboard>
+                        <DoubleAnimation 
+                            Duration="0:0:0.1" To="1"
+                            Storyboard.TargetProperty="Opacity" 
+                            Storyboard.TargetName="Toolbar"/>
+                    </Storyboard>
+                </VisualState>
+                <VisualState x:Name="Hidden">
+                    <Storyboard>
+                        <DoubleAnimation 
+                            Duration="0:0:0.15" To="0"
+                            Storyboard.TargetProperty="Opacity" 
+                            Storyboard.TargetName="Toolbar"/>
+                    </Storyboard>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <Grid x:Name="Toolbar"
+              Visibility="{x:Bind converters:Helpers.VisibleIf(Toolbar.Opacity), Mode=OneWay}"
+              Grid.Row="1"
+              Background="{ThemeResource LayerOnMicaBaseAltFillColorDefaultBrush}">
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" MinHeight="8"/>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <Grid.Resources>
-                <converters:TimeValueConverter x:Key="TimeValueConverter"/>
-                <converters:VisibilityConverter x:Key="VisibilityConverter"/>
-            </Grid.Resources>
-
             <ProgressBar
-                Grid.Column="0"
-                Margin="5"
+                Grid.Row="0"
+                Margin="8"
                 IsIndeterminate="True"
-                Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Opening), Mode=OneWay}"/>
+                Visibility="{x:Bind ViewModel.PlaybackViewModel.IsLoading, Mode=OneWay, Converter={StaticResource VisibilityConverter}}"/>
 
             <Grid 
-                Grid.Column="0"
-                Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Playing, models:PlaybackState.Paused), Mode=OneWay}">
+                Grid.Row="0"
+                Margin="8"
+                Visibility="{x:Bind ViewModel.PlaybackViewModel.IsActivePlayback, Mode=OneWay, Converter={StaticResource VisibilityConverter}}">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="80"/>
+                    <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="80"/>
+                    <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
                 <TextBlock 
                     Grid.Column="0"
-                    Margin="5"
+                    MinWidth="70"
+                    TextAlignment="Center"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
-                    Text="{x:Bind converters:Helpers.ToString(ViewModel.Position), Mode=OneWay}"/>
+                    Text="{x:Bind converters:Helpers.ToString(ViewModel.PlaybackViewModel.Position), Mode=OneWay}"/>
 
-                <local:AppSlider
+                <TextBlock 
+                    Grid.Column="2"
+                    MinWidth="70"
+                    TextAlignment="Center"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Text="{x:Bind converters:Helpers.ToString(ViewModel.PlaybackViewModel.RemainingTime), Mode=OneWay}"/>
+
+                <controls:AppSlider
                     Grid.Column="1"  
                     MaxValue="{x:Bind ViewModel.Duration, Mode=OneWay}"
                     NavigationStepFrequency="10"
@@ -59,16 +90,16 @@
                     Value="{x:Bind ViewModel.Position, Mode=TwoWay}"
                     ThumbTipValueConverter="{StaticResource TimeValueConverter}"
                     PositionCommand="{x:Bind ViewModel.PositionCommand}"/>
-
-                <TextBlock 
-                    Grid.Column="2"
-                    Margin="5"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Text="{x:Bind converters:Helpers.ToString(ViewModel.Duration), Mode=OneWay}"/>
             </Grid>
 
-            <Grid Grid.Row="1">
+            <Grid Grid.Row="1" Margin="8,0,8,8">
+                <Grid.Resources>
+                    <Style TargetType="Button" BasedOn="{StaticResource ControlButton}"/>
+                    <Style TargetType="FontIcon">
+                        <Setter Property="FontSize" Value="16"/>
+                    </Style>
+                </Grid.Resources>
+
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto"/>
@@ -76,15 +107,13 @@
                 </Grid.ColumnDefinitions>
 
                 <StackPanel Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Left">
-                    <Button Style="{StaticResource PlaybackButton}" Command="{x:Bind ViewModel.OpenMediaFileCommand}">
+                    <Button Command="{x:Bind ViewModel.OpenMediaFileCommand}">
                         <Button.Content>
                             <FontIcon Margin="0,0,0,0" Glyph="&#xF847;" />
                         </Button.Content>
                     </Button>
 
-                    <Button 
-                        Style="{StaticResource PlaybackButton}"
-                        IsEnabled="{x:Bind converters:Helpers.IsEnabled(ViewModel.MruListViewModel.Items.Count), Mode=OneWay}">
+                    <Button IsEnabled="{x:Bind ViewModel.MruListViewModel.HasItems, Mode=OneWay}">
                         <Button.Content>
                             <FontIcon Margin="0,0,0,0" Glyph="&#xE81C;" />
                         </Button.Content>
@@ -94,9 +123,9 @@
                                 <ItemsRepeater Margin="-8" ItemsSource="{x:Bind ViewModel.MruListViewModel.Items}">
                                     <ItemsRepeater.ItemTemplate>
                                         <DataTemplate>
-                                            <local:AppItemContainer Command="{Binding SelectCommand}" Padding="2">
+                                            <controls:AppItemContainer Command="{Binding SelectCommand}" Padding="2">
                                                 <TextBlock Text="{Binding Name}" Margin="8,4"/>
-                                            </local:AppItemContainer>
+                                            </controls:AppItemContainer>
                                         </DataTemplate>
                                     </ItemsRepeater.ItemTemplate>
                                 </ItemsRepeater>
@@ -104,9 +133,7 @@
                         </Button.Flyout>
                     </Button>
 
-                    <Button
-                        Style="{StaticResource PlaybackButton}"
-                        IsEnabled="{x:Bind converters:Helpers.IsEnabled(ViewModel.PlaylistViewModel.Items.Count), Mode=OneWay}">
+                    <Button IsEnabled="{x:Bind ViewModel.PlaylistViewModel.HasItems, Mode=OneWay}">
                         <Button.Content>
                             <FontIcon Margin="0,0,0,0" Glyph="&#xE90B;" />
                         </Button.Content>
@@ -116,12 +143,12 @@
                                 <ItemsRepeater Margin="-8" ItemsSource="{x:Bind ViewModel.PlaylistViewModel.Items}">
                                     <ItemsRepeater.ItemTemplate>
                                         <DataTemplate>
-                                            <local:AppItemContainer 
+                                            <controls:AppItemContainer 
                                                 IsSelected="{Binding IsCurrent, Mode=OneWay}"
                                                 Command="{Binding SelectCommand}" 
                                                 Padding="2">
-                                                  <TextBlock Text="{Binding Name}" Margin="4,4"/>
-                                            </local:AppItemContainer>
+                                                <TextBlock Text="{Binding Name}" Margin="4,4"/>
+                                            </controls:AppItemContainer>
                                         </DataTemplate>
                                     </ItemsRepeater.ItemTemplate>
                                 </ItemsRepeater>
@@ -132,47 +159,57 @@
 
                 <StackPanel Grid.Column="1" Orientation="Horizontal">
                     <Button 
-                        Command="{x:Bind ViewModel.SkipBackCommand}"
-                        Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Playing, models:PlaybackState.Paused), Mode=OneWay}"
-                        Style="{StaticResource PlaybackButton}">
+                        Command="{x:Bind ViewModel.PlaybackViewModel.SkipBackCommand}"
+                        Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.PlaybackViewModel.IsActivePlayback), Mode=OneWay}">
                         <Button.Content>
-                            <FontIcon Margin="0,0,0,0" Glyph="&#xEB9E;" />
+                            <FontIcon Glyph="&#xEB9E;">
+                                <FontIcon.RenderTransform>
+                                    <TranslateTransform X="-1"/>
+                                </FontIcon.RenderTransform>
+                            </FontIcon>
                         </Button.Content>
                     </Button>
 
                     <Button 
                         Style="{StaticResource PlayButton}"
-                        Width="48" Height="48"
-                        Command="{x:Bind ViewModel.TogglePlaybackCommand, Mode=OneTime}">
+                        Command="{x:Bind ViewModel.PlaybackViewModel.TogglePlaybackCommand, Mode=OneTime}">
                         <Button.Content>
                             <Grid>
                                 <FontIcon 
-                                    Margin="2,2,0,0"
-                                    Visibility="{x:Bind converters:Helpers.VisibleIfNot(ViewModel.State, models:PlaybackState.Playing), Mode=OneWay}"
-                                    Glyph="&#xF5B0;" />
+                                    Visibility="{x:Bind converters:Helpers.VisibleIfNot(ViewModel.PlaybackViewModel.IsPlaying), Mode=OneWay}"
+                                    Glyph="&#xF5B0;">
+                                    <FontIcon.RenderTransform>
+                                        <TranslateTransform X="0.5" Y="0.5"/>
+                                    </FontIcon.RenderTransform>
+                                </FontIcon>
                                 <FontIcon 
-                                    Margin="1,1,0,0"
-                                    Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Playing), Mode=OneWay}"
-                                    Glyph="&#xF8AE;" />
+                                    Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.PlaybackViewModel.IsPlaying), Mode=OneWay}"
+                                    Glyph="&#xF8AE;">
+                                    <FontIcon.RenderTransform>
+                                        <TranslateTransform X="0.5" Y="0.5"/>
+                                    </FontIcon.RenderTransform>
+                                </FontIcon>
                             </Grid>
                         </Button.Content>
                     </Button>
 
                     <Button
-                        Command="{x:Bind ViewModel.SkipForwardCommand}"                            
-                        Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Playing, models:PlaybackState.Paused), Mode=OneWay}"
-                        Style="{StaticResource PlaybackButton}">
+                        Command="{x:Bind ViewModel.PlaybackViewModel.SkipForwardCommand}"                            
+                        Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.PlaybackViewModel.IsActivePlayback), Mode=OneWay}">
                         <Button.Content>
-                            <FontIcon Margin="0,0,0,0" Glyph="&#xEB9D;" />
+                            <FontIcon Margin="2,0,0,0" Glyph="&#xEB9D;">
+                                <FontIcon.RenderTransform>
+                                    <TranslateTransform X="1"/>
+                                </FontIcon.RenderTransform>
+                            </FontIcon>
                         </Button.Content>
                     </Button>
                 </StackPanel>
 
                 <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
                     <Button 
-                        Style="{StaticResource PlaybackButton}"
-                        Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Playing, models:PlaybackState.Paused), Mode=OneWay}"
-                        IsEnabled="{x:Bind converters:Helpers.IsEnabled(ViewModel.TracksViewModel.AudioTracks.Count, ViewModel.TracksViewModel.SubtitleTracks.Count), Mode=OneWay}">
+                        Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.PlaybackViewModel.IsActivePlayback), Mode=OneWay}"
+                        IsEnabled="{x:Bind ViewModel.TracksViewModel.HasTracks, Mode=OneWay}">
                         <Button.Content>
                             <FontIcon Margin="0,0,0,0" Glyph="&#xED1E;" />
                         </Button.Content>
@@ -189,12 +226,12 @@
                                     <ItemsRepeater Margin="4" ItemsSource="{x:Bind ViewModel.TracksViewModel.AudioTracks}">
                                         <ItemsRepeater.ItemTemplate>
                                             <DataTemplate>
-                                                <local:AppItemContainer 
+                                                <controls:AppItemContainer 
                                                     IsSelected="{Binding IsSelected, Mode=OneWay}"
                                                     Command="{Binding SelectCommand}" 
                                                     Padding="2">
                                                     <TextBlock Text="{Binding Text}" Margin="4,4,8,4"/>
-                                                </local:AppItemContainer>
+                                                </controls:AppItemContainer>
                                             </DataTemplate>
                                         </ItemsRepeater.ItemTemplate>
                                     </ItemsRepeater>
@@ -209,12 +246,12 @@
                                     <ItemsRepeater Margin="4" ItemsSource="{x:Bind ViewModel.TracksViewModel.SubtitleTracks}">
                                         <ItemsRepeater.ItemTemplate>
                                             <DataTemplate>
-                                                <local:AppItemContainer 
+                                                <controls:AppItemContainer 
                                                     IsSelected="{Binding IsSelected, Mode=OneWay}"
                                                     Command="{Binding SelectCommand}" 
                                                     Padding="2">
                                                     <TextBlock Text="{Binding Text}" Margin="4,4,8,4"/>
-                                                </local:AppItemContainer>
+                                                </controls:AppItemContainer>
                                             </DataTemplate>
                                         </ItemsRepeater.ItemTemplate>
                                     </ItemsRepeater>
@@ -223,7 +260,7 @@
                         </Button.Flyout>
                     </Button>
 
-                    <Button Style="{StaticResource PlaybackButton}">
+                    <Button>
                         <Button.Content>
                             <FontIcon 
                                 Margin="0,0,0,0"
@@ -253,7 +290,7 @@
                         </Button.Flyout>
                     </Button>
 
-                    <Button Style="{StaticResource PlaybackButton}">
+                    <Button>
                         <Button.Content>
                             <FontIcon Margin="0,0,0,0" Glyph="&#xE712;" />
                         </Button.Content>
@@ -276,5 +313,6 @@
                 </StackPanel>
             </Grid>
         </Grid>
-    </Border>
+
+    </Grid>
 </UserControl>
