--- a/src/VideoApp/Views/ControlView.xaml
+++ b/src/VideoApp/Views/ControlView.xaml
@@ -3,7 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:VideoApp.Views"
-    xmlns:media="using:Microsoft.UI.Xaml.Media"
     xmlns:models="using:VideoApp.Core.Models"
     xmlns:controls="using:VideoApp.Controls"
     xmlns:converters="using:VideoApp.Converters"
@@ -79,17 +78,19 @@
                     MinWidth="70"
                     TextAlignment="Center"
                     HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Text="{x:Bind converters:Helpers.ToString(ViewModel.PlaybackViewModel.RemainingTime), Mode=OneWay}"/>
+                    VerticalAlignment="Center">
+                    <Run Text="-"/>
+                    <Run Text="{x:Bind converters:Helpers.ToString(ViewModel.PlaybackViewModel.RemainingTime), Mode=OneWay}"/>
+                </TextBlock>                    
 
                 <controls:AppSlider
                     Grid.Column="1"  
-                    MaxValue="{x:Bind ViewModel.Duration, Mode=OneWay}"
+                    MaxValue="{x:Bind ViewModel.PlaybackViewModel.Duration, Mode=OneWay}"
                     NavigationStepFrequency="10"
                     StepFrequency="1"
-                    Value="{x:Bind ViewModel.Position, Mode=TwoWay}"
+                    Value="{x:Bind ViewModel.PlaybackViewModel.Position, Mode=OneWay}"
                     ThumbTipValueConverter="{StaticResource TimeValueConverter}"
-                    PositionCommand="{x:Bind ViewModel.PositionCommand}"/>
+                    PositionCommand="{x:Bind ViewModel.PlaybackViewModel.PositionCommand}"/>
             </Grid>
 
             <Grid Grid.Row="1" Margin="8,0,8,8">
@@ -160,7 +161,7 @@
                 <StackPanel Grid.Column="1" Orientation="Horizontal">
                     <Button 
                         Command="{x:Bind ViewModel.PlaybackViewModel.SkipBackCommand}"
-                        Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.PlaybackViewModel.IsActivePlayback), Mode=OneWay}">
+                        IsEnabled="{x:Bind ViewModel.PlaybackViewModel.IsActivePlayback, Mode=OneWay}">
                         <Button.Content>
                             <FontIcon Glyph="&#xEB9E;">
                                 <FontIcon.RenderTransform>
@@ -170,8 +171,21 @@
                         </Button.Content>
                     </Button>
 
+                    <Button
+                        IsEnabled="{x:Bind ViewModel.PlaybackViewModel.CanGoPrevious, Mode=OneWay}"
+                        Command="{x:Bind ViewModel.PlaybackViewModel.GoPreviousCommand}">
+                        <Button.Content>
+                            <FontIcon Glyph="&#xE892;">
+                                <FontIcon.RenderTransform>
+                                    <TranslateTransform X="-1"/>
+                                </FontIcon.RenderTransform>
+                            </FontIcon>
+                        </Button.Content>
+                    </Button>
+
                     <Button 
                         Style="{StaticResource PlayButton}"
+                        IsEnabled="{x:Bind converters:Helpers.Not(ViewModel.PlaybackViewModel.IsLoading), Mode=OneWay}"
                         Command="{x:Bind ViewModel.PlaybackViewModel.TogglePlaybackCommand, Mode=OneTime}">
                         <Button.Content>
                             <Grid>
@@ -194,8 +208,20 @@
                     </Button>
 
                     <Button
+                        IsEnabled="{x:Bind ViewModel.PlaybackViewModel.CanGoNext, Mode=OneWay}"
+                        Command="{x:Bind ViewModel.PlaybackViewModel.GoNextCommand}">
+                        <Button.Content>
+                            <FontIcon Margin="2,0,0,0" Glyph="&#xE893;">
+                                <FontIcon.RenderTransform>
+                                    <TranslateTransform X="1"/>
+                                </FontIcon.RenderTransform>
+                            </FontIcon>
+                        </Button.Content>
+                    </Button>
+
+                    <Button
                         Command="{x:Bind ViewModel.PlaybackViewModel.SkipForwardCommand}"                            
-                        Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.PlaybackViewModel.IsActivePlayback), Mode=OneWay}">
+                        IsEnabled="{x:Bind ViewModel.PlaybackViewModel.IsActivePlayback, Mode=OneWay}">
                         <Button.Content>
                             <FontIcon Margin="2,0,0,0" Glyph="&#xEB9D;">
                                 <FontIcon.RenderTransform>
@@ -220,9 +246,9 @@
                                     <TextBlock
                                         Text="Audio"
                                         Margin="4" 
+                                        Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.TracksViewModel.AudioTracks.Count), Mode=OneWay}"
                                         Foreground="{ThemeResource TextOnAccentFillColorDisabledBrush}"
                                         Style="{ThemeResource CaptionTextBlockStyle}"/>
-
                                     <ItemsRepeater Margin="4" ItemsSource="{x:Bind ViewModel.TracksViewModel.AudioTracks}">
                                         <ItemsRepeater.ItemTemplate>
                                             <DataTemplate>
@@ -240,9 +266,9 @@
                                         Text="Subtitle"
                                         VerticalAlignment="Center"
                                         Margin="4" 
+                                        Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.TracksViewModel.SubtitleTracks.Count), Mode=OneWay}"
                                         Foreground="{ThemeResource TextOnAccentFillColorDisabledBrush}"
                                         Style="{ThemeResource CaptionTextBlockStyle}"/>
-
                                     <ItemsRepeater Margin="4" ItemsSource="{x:Bind ViewModel.TracksViewModel.SubtitleTracks}">
                                         <ItemsRepeater.ItemTemplate>
                                             <DataTemplate>
@@ -264,27 +290,41 @@
                         <Button.Content>
                             <FontIcon 
                                 Margin="0,0,0,0"
-                                Glyph="{x:Bind converters:Helpers.ToVolumeIcon(ViewModel.Volume), Mode=OneWay}" />
+                                Glyph="{x:Bind converters:Helpers.ToVolumeIcon(ViewModel.PlaybackViewModel.Volume), Mode=OneWay}" />
                         </Button.Content>
 
                         <Button.Flyout>
                             <Flyout x:Name="VolumeFlyout" Placement="Bottom">
-                                <Grid MinWidth="200" MaxWidth="300">
+                                <Grid Margin="0,-8" MinWidth="200" MaxWidth="300">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="Auto"/>
                                         <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="Auto"/>
                                     </Grid.ColumnDefinitions>
 
                                     <FontIcon 
                                         Grid.Column="0"
                                         Margin="0,0,8,0"
-                                        Glyph="{x:Bind converters:Helpers.ToVolumeIcon(ViewModel.Volume), Mode=OneWay}" />
+                                        FontSize="16"
+                                        Glyph="{x:Bind converters:Helpers.ToVolumeIcon(ViewModel.PlaybackViewModel.Volume), Mode=OneWay}" />
 
-                                    <Slider 
+                                    <controls:AppSlider 
                                         Grid.Column="1"
                                         Margin="5,0,5,0"
-                                        Maximum="100"
-                                        Value="{x:Bind ViewModel.Volume, Mode=TwoWay}"/>
+                                        MaxValue="100"
+                                        NavigationStepFrequency="10"
+                                        StepFrequency="1"
+                                        ShowToolTip="False"
+                                        PositionCommand="{x:Bind ViewModel.PlaybackViewModel.VolumeCommand}"
+                                        Value="{x:Bind ViewModel.PlaybackViewModel.Volume, Mode=OneWay}"/>
+
+                                    <TextBlock
+                                        Grid.Column="2"
+                                        MinWidth="30"
+                                        Margin="0,0,-4,0"
+                                        TextAlignment="Center"
+                                        VerticalAlignment="Center"
+                                        Text="{x:Bind ViewModel.PlaybackViewModel.Volume, Mode=OneWay}"/>
                                 </Grid>
                             </Flyout>
                         </Button.Flyout>
