--- a/src/VideoApp/Views/NotificationView.xaml
+++ b/src/VideoApp/Views/NotificationView.xaml
@@ -3,11 +3,183 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:VideoApp.Views"
+    xmlns:converters="using:VideoApp.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <Grid>
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="Notifications">
+                <VisualState x:Name="None">
+                    <Storyboard>
+                        <DoubleAnimation 
+                            Duration="0:0:0.1" To="0"
+                            Storyboard.TargetProperty="Opacity" 
+                            Storyboard.TargetName="NF_Volume"/>
+                        <DoubleAnimation 
+                            Duration="0:0:0.1" To="0"
+                            Storyboard.TargetProperty="Opacity"   
+                            Storyboard.TargetName="NF_PlaybackState"/>
+                        <DoubleAnimation 
+                            Duration="0:0:0.1" To="0"
+                            Storyboard.TargetProperty="Opacity" 
+                            Storyboard.TargetName="NF_Skip"/>
+                    </Storyboard>
+                </VisualState>
+                <VisualState x:Name="Volume">
+                    <Storyboard>
+                        <DoubleAnimation 
+                            Duration="0:0:0.15" To="1"
+                            Storyboard.TargetProperty="Opacity" 
+                            Storyboard.TargetName="NF_Volume"/>
+                    </Storyboard>
+                </VisualState>
+                <VisualState x:Name="PlaybackState">
+                    <Storyboard>
+                        <DoubleAnimation 
+                            Duration="0:0:0.15"
+                            To="1"
+                            Storyboard.TargetProperty="Opacity" 
+                            Storyboard.TargetName="NF_PlaybackState"/>
+                    </Storyboard>
+                </VisualState>
+                <VisualState x:Name="Rewind">
+                    <Storyboard>
+                        <DoubleAnimation 
+                            Duration="0:0:0" To="1"
+                            Storyboard.TargetProperty="Opacity"
+                            Storyboard.TargetName="NF_SkipRewind"/>
+                        <DoubleAnimation 
+                            Duration="0:0:0.15" To="1"
+                            Storyboard.TargetProperty="Opacity" 
+                            Storyboard.TargetName="NF_Skip"/>
+                    </Storyboard>
+                </VisualState>
+                <VisualState x:Name="Forward">
+                    <Storyboard>
+                        <DoubleAnimation 
+                            Duration="0:0:0" To="1"
+                            Storyboard.TargetProperty="Opacity" 
+                            Storyboard.TargetName="NF_SkipForward"/>
+                        <DoubleAnimation 
+                            Duration="0:0:0.15" To="1"
+                            Storyboard.TargetProperty="Opacity" 
+                            Storyboard.TargetName="NF_Skip"/>
+                    </Storyboard>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
 
+        <Border 
+            x:Name="NF_Volume"
+            Style="{StaticResource OsdBorder}"
+            Opacity="0"
+            Visibility="{x:Bind converters:Helpers.VisibleIf(NF_Volume.Opacity), Mode=OneWay}">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <FontIcon 
+                    Margin="0,4,0,0"  
+                    VerticalAlignment="Center"
+                    Glyph="{x:Bind converters:Helpers.ToVolumeIcon(ViewModel.PlaybackViewModel.Volume), Mode=OneWay}" />
+                <TextBlock 
+                    Text="{x:Bind ViewModel.PlaybackViewModel.Volume, Mode=OneWay}"
+                    Margin="10,0,0,0"
+                    Grid.Column="1"
+                    TextAlignment="Right"
+                    VerticalAlignment="Center"
+                    Style="{ThemeResource TitleTextBlockStyle}"/>
+            </Grid>
+        </Border>
+
+        <Border 
+            x:Name="NF_PlaybackState"
+            Style="{StaticResource OsdBorder}"
+            Opacity="0"
+            Visibility="{x:Bind converters:Helpers.VisibleIf(NF_PlaybackState.Opacity), Mode=OneWay}">
+            <Grid>
+                <Grid Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.PlaybackViewModel.IsPaused), Mode=OneWay}">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <FontIcon Glyph="&#xF8AE;" VerticalAlignment="Center">
+                        <FontIcon.RenderTransform>
+                            <TranslateTransform X="0.5" Y="0.5"/>
+                        </FontIcon.RenderTransform>
+                    </FontIcon>
+                    <TextBlock 
+                        Text="Paused"
+                        Grid.Column="1"
+                        Margin="16,0,0,0"
+                        VerticalAlignment="Center"
+                        Style="{ThemeResource TitleTextBlockStyle}"/>
+                </Grid>
+                <Grid Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.PlaybackViewModel.IsPlaying), Mode=OneWay}">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <FontIcon Glyph="&#xF5B0;" VerticalAlignment="Center">
+                        <FontIcon.RenderTransform>
+                            <TranslateTransform X="0.5" Y="0.5"/>
+                        </FontIcon.RenderTransform>
+                    </FontIcon>
+                    <TextBlock 
+                        Text="Playing"
+                        Grid.Column="1"
+                        Margin="16,0,0,0"
+                        VerticalAlignment="Center"
+                        Style="{ThemeResource TitleTextBlockStyle}"/>
+                </Grid>
+            </Grid>
+        </Border>
+
+        <Border 
+            x:Name="NF_Skip"
+            Opacity="0"
+            Style="{StaticResource OsdBorder}"
+            Visibility="{x:Bind converters:Helpers.VisibleIf(NF_Skip.Opacity), Mode=OneWay}">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <FontIcon 
+                    x:Name="NF_SkipRewind"
+                    Grid.Column="0"
+                    Margin="4,4,0,0"
+                    Glyph="&#xEB9E;"
+                    Opacity="0"
+                    VerticalAlignment="Center" />
+                <FontIcon 
+                    x:Name="NF_SkipForward"
+                    Grid.Column="2"
+                    Margin="16,4,4,0"
+                    Glyph="&#xEB9D;"
+                    Opacity="0"
+                    VerticalAlignment="Center" />
+                <TextBlock 
+                    Margin="10,0,0,0"
+                    Grid.Column="1"
+                    MinWidth="180"
+                    TextAlignment="Right"
+                    VerticalAlignment="Center">
+                    <Run 
+                        FontSize="28"
+                        Text="{x:Bind converters:Helpers.ToString(ViewModel.PlaybackViewModel.Position), Mode=OneWay}"/>
+                    <Run 
+                        FontSize="28"
+                        Text="/"/>
+                    <Run 
+                        FontSize="14"
+                        Text="{x:Bind converters:Helpers.ToString(ViewModel.PlaybackViewModel.Duration), Mode=OneWay}"/>
+                </TextBlock>
+            </Grid>
+        </Border>
     </Grid>
 </UserControl>
