Implement the settings

--- a/src/VideoApp/MainWindow.xaml
+++ b/src/VideoApp/MainWindow.xaml
@@ -9,4 +9,7 @@
    <Window.SystemBackdrop>
         <MicaBackdrop />
     </Window.SystemBackdrop>
+
+    <Grid x:Name="Root">
+    </Grid>
 </Window>
