--- a/src/VideoApp/Views/SettingsView.xaml
+++ b/src/VideoApp/Views/SettingsView.xaml
@@ -8,21 +8,74 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <NavigationView>
-        <ScrollView Grid.Column="1">
-            <StackPanel>
-                <TextBlock
-                    Text="Settings"
-                    Style="{ThemeResource TitleLargeTextBlockStyle}"/>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
+        <Button Command="{x:Bind ViewModel.CloseCommand}" VerticalAlignment="Center" Style="{StaticResource ControlButton}">
+            <Button.Content>
+                <FontIcon Margin="0,0,0,0" Glyph="&#xE72B;" FontSize="15" />
+            </Button.Content>
+        </Button>
+
+        <TextBlock
+            Grid.Column="1"
+            Grid.Row="0"
+            Margin="8"
+            VerticalAlignment="Center"
+            Text="Settings"
+            Style="{ThemeResource TitleLargeTextBlockStyle}"/>
+
+        <ScrollView Grid.Column="1" Grid.Row="1">
+            <StackPanel Padding="8,16,16,16">
                 <TextBlock 
                     Text="Appearance"
+                    Margin="0,0,0,12"
                     Style="{ThemeResource BodyStrongTextBlockStyle}"/>
+
+                <Border
+                    BorderThickness="1"
+                    Padding="16"
+                    CornerRadius="4"
+                    BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+                    Background="{ThemeResource CardBackgroundFillColorDefaultBrush}">
+                    <Grid>
+                        <FontIcon Glyph="&#xE790;" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                        <StackPanel VerticalAlignment="Center" Margin="36,0,0,0">
+                            <TextBlock Text="App theme" Style="{ThemeResource BodyTextBlockStyle}"/>
+                            <TextBlock 
+                                Text="Select which app theme to display" 
+                                Foreground="{ThemeResource TextFillColorSecondaryBrush}"
+                                Style="{ThemeResource CaptionTextBlockStyle}"/>
+                        </StackPanel>
+                        <ComboBox 
+                            SelectedItem="{x:Bind ViewModel.Theme, Mode=TwoWay}"
+                            ItemsSource="{x:Bind ViewModel.Themes}"
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Right"/>
+                    </Grid>
+                </Border>
 
                 <TextBlock 
                     Text="About this app"
+                    Margin="0,36,0,12"
                     Style="{ThemeResource BodyStrongTextBlockStyle}"/>
+
+                <TextBlock Margin="0,0,0,8">
+                    <Run Text="{x:Bind ViewModel.Info.ProductName}"/>
+                    <Run Text="{x:Bind ViewModel.Info.FileVersion}"/>
+                </TextBlock>
+
+                <TextBlock 
+                    Text="{x:Bind ViewModel.Info.Copyright}"
+                    Style="{ThemeResource BodyTextBlockStyle}"/>
             </StackPanel>
         </ScrollView>
-    </NavigationView>
+    </Grid>
 </UserControl>
